sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:29: error: value += is not a member of Int
        i += 1
          ^AlgBubbleSort1:30: error: value += is not a member of Int
      i += 1
        ^