sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def deplacerCase(i:Int):Boolean =
{
  if (plusPetit(i + 1, i))
  {
    echange(i, i + 1)
    return true
  }
  
  return false
}

def listeTriee():Boolean =
{
  for (i <- 0 to getNombreValeurs() - 2)
  	if (plusPetit(i + 1, i))
  		return false
  
  return true
}

def bubbleSort()
{
  while (!listeTriee())
  {
    for (i:Int <- 0 to getNombreValeurs() - 2)
    {
      while(deplacerCase(i) && i < getNombreValeurs() - 1)
        i += 1
      i += 1
    }
  }
}